<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCreatePost"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/add_new_post"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/editTextPostBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="top|start"
        android:hint="@string/hint_post_content"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:autofillHints="username"
        app:layout_constraintTop_toBottomOf="@id/toolbarCreatePost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewPreview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:contentDescription="@string/preview_image"
        app:layout_constraintTop_toBottomOf="@id/editTextPostBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/add_image"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDarkHighContrast"
        app:layout_constraintTop_toBottomOf="@id/imageViewPreview"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewImageLocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/image_upload_locked"
        android:textColor="@color/colorError"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/buttonSelectImage"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonWatchAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/watch_ad_to_unlock"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDarkHighContrast"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textViewImageLocked"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/post"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDarkHighContrast"
        app:layout_constraintTop_toBottomOf="@id/buttonWatchAd"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
